# openreflect-gcp-vertex-memorycore

./: .cursorrules  .gitignore  README.md  example_search.js  example_write.js  memory_client.js  openreflect-implementation-plan-120925-1718.md  openreflect-status-120925-1718.md  package-lock.json
.claude/: settings.local.json
agent-collab/: README.md
documents/: openreflect-connector-testing-and-overview.md
mcp-server-ghost-js/: README.md
mcp-server-python/: .env.example  .gitignore  Dockerfile  README.md  memory_bank_server.py  pyproject.toml
mcp-server-python/deploy/: build.sh  cloud-run-template.yaml
mcp-server-python/deploy/advanced/tier-3-per-user/: README.md
mcp-server-python/deploy/provisioning/: provision_user.py
mcp-server-python/docs/: ARCHITECTURE_STRATEGY.md  AUTH_DESIGN.md  CHATGPT_INTEGRATION_REQUIREMENTS.md  DEPLOYMENT.md  INTEGRATION_GUIDE.md  INTEGRATION_TESTING.md  MEMORY_AUTHORITY_EPISTEMOLOGY.md  MONITORING.md  SECURITY.md  SETUP_STATUS.md  STREAMABLE_HTTP.md  TOOLS_GUIDE.md  VERIFICATION_CHECKLIST.md
mcp-server-python/examples/: automatic_tool_calling.py  basic_usage.py  claude_config.json  user_client_config.json
mcp-server-python/src/: app_state.py  auth.py  config.py  formatters.py  prompts.py  server.py  server_http.py  tools.py  validators.py
mcp-server-python/tests/: test_http_server.py  test_http_streamable.py  test_local_docker.ps1  test_local_docker.sh
oAuth/: client_secret_429269489266-mo7ta40q0samb9o4r3p2rha5fg15vnha.apps.googleusercontent.com.json
provenance/: README.md  events.md  model.md  roadmap.md  (+1 more)
(+65 files in other folders)
